--- a/metadata.yaml
+++ b/metadata.yaml
@@ -5,6 +5,9 @@ contributor:
     agent_name: Bayha, Edwin F.
     gutenberg_agent_id: '55492'
     url: http://www.gutenberg.org/2009/agents/55492
+covers:
+- cover_type: archival
+  image_path: 69920-h/images/cover.jpg
 creator:
   author:
     agent_name: Barbour, Ralph Henry
@@ -15,6 +18,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2067
     wikipedia: https://en.wikipedia.org/wiki/Ralph_Henry_Barbour
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69920#Holly-The-Romance-of-a-Southern-Girl
 gutenberg_issued: '2023-01-31'
 identifiers:
   gutenberg: '69920'
